--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,14 +1,10 @@
-#div_sidebar{
+#sidebar{
     height:100%;
-    position:fixed;
-    background-color:#dfdfdf;
-    margin-top:75px;
     color:#660033;
     font-size:14px;
-    padding: 0px 5px;
 }
 .li-underlined{
-    border-bottom:1.5px solid #660033;
+    border-bottom:1.5px solid #fc8003;
 }
 .sidebar ul{
     list-style-type:none;
@@ -18,7 +14,7 @@
     margin:4px 0px;
 }
 .sidebar a{
-    padding:1em 2em;
+    padding:1em;
     display:block;
 }
 .sidebar a:hover{
