--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -3,9 +3,6 @@
     color:#660033;
     font-size:14px;
 }
-.li-underlined{
-    border-bottom:1.5px solid #fc8003;
-}
 .sidebar ul{
     list-style-type:none;
     padding:0px;
@@ -19,4 +16,75 @@
 }
 .sidebar a:hover{
     background-color:#c9c9c9;
+}
+
+
+
+#div-sidebar{
+    /* background-color:#c9c9c9; */
+    padding: 0.75em;
+    height: 100%;
+    padding-bottom: 10em;
+}
+/* #sidebar-wrapper::-webkit-scrollbar{
+    display: none;
+}
+#sidebar-wrapper::-moz-webkit-scrollbar{
+    display: none;
+} */
+.list-group {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+.list-underlined{
+    width: 100%;
+    margin:0px;
+    padding:0px;
+    border-bottom:1.5px solid #fc8003;
+    border:0px;
+    height: 0.8px;
+}  
+a.list-group-item{
+    color:#660033;
+    font-size: 16px;
+}
+.list-group-item {
+    position: relative;
+    display: block;
+    border: 0px;
+    background-color: inherit;
+    padding: 0.8em 1.5em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    color: #fff;
+    border-radius: 0px !important;
+}
+.list-group-item.active {
+    z-index: 2;
+    background-color:#c9c9c9;
+}
+.list-group-item:hover{
+    background-color:#d9d9d9;
+}
+.list-group-item + .list-group-item {
+    border-top-width: 0;
+}
+#sidebar-wrapper .list-group-item > i{
+    color:#ffa51f;
+}
+
+
+@media (min-width: 576px) {
+    
+}
+@media (min-width: 768px) {
+  
+}
+@media (min-width: 992px) {
+  
+}
+@media (min-width: 1200px) {
+  
 }
